--- a/lib/cereal/include/cereal/external/rapidxml/manual.html
+++ b/lib/cereal/include/cereal/external/rapidxml/manual.html
@@ -111,7 +111,7 @@ char *node_name = doc.allocate_string(name);        // Allocate string and copy 
 xml_node&lt;&gt; *node = doc.allocate_node(node_element, node_name);  // Set node name to node_name
 </pre> Check <a href="#namespacerapidxml_1reference" kindref="member">Reference</a>  section for description of the entire interface.</para></sect2><sect2><h3 id="namespacerapidxml_1printing">2.4 Printing XML</h3><para>You can print <code><a href="#classrapidxml_1_1xml__document" kindref="compound">xml_document</a></code> and <code><a href="#classrapidxml_1_1xml__node" kindref="compound">xml_node</a></code> objects into an XML string. Use <a href="#namespacerapidxml_b94d570fc4c4ab2423813cd0243326b1_1b94d570fc4c4ab2423813cd0243326b1" kindref="member">print()</a> function or operator &lt;&lt;, which are defined in <code><a href="#rapidxml__print_8hpp" kindref="compound">rapidxml_print.hpp</a></code> header. <pre>using namespace rapidxml;
 xml_document&lt;&gt; doc;    // character type defaults to char
-// ... some code to fill the document
+// ... some code to Fill the document
 
 // Print to stream using operator &lt;&lt;
 std::cout &lt;&lt; doc;   
